解决在tmux 下使用vim时esc延迟的问题

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,5 @@
-unbind C-b
-set -g prefix C-x
 setw -g mode-keys vi
+set -sg escape-time 0
 
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 
